docs: update about me

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Vinicius Oliveira"
   avatar           : "profile.png"
-  bio              : "Student of Computer Science, passionate about technology"
+  bio              : "DevOps Support Analyst graduated in computer science passionate about technology"
   location         : "Brazil"
   employer         :
   pubmed           : 
