fix: update instagram username

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "vinicius-deoliveira"
   google_plus      :
   keybase          :
-  instagram        : "piholiveira_"
+  instagram        : "vinicius.pih"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "pirodriguees"
